--- a/views/server.ejs
+++ b/views/server.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Weocme </title>
+    <title>Welcome to Task-Master</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>Welcome to </h1>
