Created a route to a sign in page

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,15 +5,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Welcome to </h1>
-    
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
-    
-    <p>Working ✅</p>
+   <header id="signin"><a href="/login">Sign in</a></header>
+    <h1>Task Master</h1>
+
 </body>
 </html>
 
