--- a/views/style.css
+++ b/views/style.css
@@ -1,4 +1,11 @@
 h1 {
     font-size: 50px;
     color: aqua;
+    text-align: center;
+}
+#signin {
+    text-align: right;
+    margin-top: 100px;
+    margin-right: 100px;
+    font-size: 30px;
 }
