--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to Task-Master</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Task List</title>
 </head>
 <body>
-   <header id="signin"><a href="/login">Sign in</a></header>
-    <h1>Task Master</h1>
-
+  <h1>Task List</h1>
+  <ul>
+    <% tasks.forEach(task => { %>
+      <li><%= task.title %></li>
+    <% }); %>
+  </ul>
+  <form action="/tasks/add" method="post">
+    <input type="text" name="title" placeholder="Add a task">
+    <button type="submit">Add Task</button>
+  </form>
 </body>
 </html>
-
