--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,7 @@
   <title>Task List</title>
 </head>
 <body>
+  <a href="/signin"><button>Sign in</button></a>
   <h1>Task List</h1>
   <ul>
     <% tasks.forEach(task => { %>
