--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,23 @@
   <title>Task List</title>
 </head>
 <body>
-  <a href="/signin"><button>Sign in</button></a>
+  <h2 id='login'>Login Or Logout</h2>
+<ul class='right'>
+    <li>
+      <% if (user) { %>
+        <div id='logoutlogin'>
+          <a href='/logout'><button>Log Out</button></a>
+        <span id='welcomeuser'>Hi <%= user.name %> </span>
+        </div>
+      <% } else { %>
+        <div id='logindiv'>
+          <a id='loginlink' href='/auth/google'><button id='loginbutton'> Login with Google</button></a>
+        </div>
+
+      <% } %>  
+    </li>
+  </ul>
+
   <h1>Task List</h1>
   <ul>
     <% tasks.forEach(task => { %>
