--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,6 +14,23 @@
           <a href='/logout'><button>Log Out</button></a>
         <span id='welcomeuser'>Hi <%= user.name %> </span>
         </div>
+        <h1>User's Tasks</h1>
+  <ul>
+    <% if (user && user.tasks) { %>
+      <% user.tasks.forEach(task => { %>
+        <li><%= task.title %></li>
+      <% }); %>
+    <% } else { %>
+      <p>No tasks found.</p>
+    <% } %>
+  </ul>
+ 
+        <h2>Add a Task</h2>
+        <form action="/profile" method="post">
+          <input type="text" name="title" placeholder="Task Title" required>
+          <button type="submit">Add Task</button>
+        </form>
+        
       <% } else { %>
         <div id='logindiv'>
           <a id='loginlink' href='/auth/google'><button id='loginbutton'> Login with Google</button></a>
@@ -22,25 +39,7 @@
       <% } %>  
     </li>
   </ul>
-
-  <h1>Task List</h1>
-  <ul>
-    <% if (user) { %>
-      <% user.tasks.forEach(task => { %>
-        <li>
-          <%= task.title %>
-          <form action="/tasks/delete/<%= task._id %>" method="post">
-            <button type="submit">Delete</button>
-          </form>
-        </li>
-      <% }); %>
-      <form action="/tasks/add" method="post">
-        <input type="text" name="title" placeholder="Add a task">
-        <button type="submit">Add Task</button>
-      </form>
-    <% } else { %>
-      <h1>Please sign in to start adding tasks!</h1>
-    <% } %>
-  </ul>
+  
+  
 </body>
 </html>
