--- a/views/style.css
+++ b/views/style.css
@@ -1,11 +1,9 @@
-h1 {
-    font-size: 50px;
-    color: aqua;
+body {
+    background-color: aqua;
+}
+#error{
     text-align: center;
 }
-#signin {
-    text-align: right;
-    margin-top: 100px;
-    margin-right: 100px;
-    font-size: 30px;
+footer{
+    margin-top: 100px ;
 }
