--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,21 +1,26 @@
-<h1>Your Tasks!</h1>
+<h1 id="head">Your Tasks!</h1>
 <% if (user && user.tasks.length === 0) { %>
-  <p>You have no tasks!</p>
+  <p id="head">You have no tasks!</p>
 <% } %>
 <% if (user) { %>
-  <ul>
+  <ul id="head">
     <% user.tasks.forEach(task => { %>
       <li><%= task.title %></li>
-      <form action="/profile/remove/<%= task._id %>?_method=PUT" method="POST">
+      <form action="/profile/remove/<%= task._id %>?_method=PUT" method="POST" >
         <input type="hidden" name="_method" value="DELETE">
         <button type="submit">Delete</button>
       </form>
     <% }); %>
   </ul>
-  <h2>Add a Task</h2>
-  <form action="/profile" method="POST">
-    <input type="text" name="title" placeholder="Task Title" required>
-    <button type="submit">Add Task</button>
+  <h2 id="taskhead">Add a Task</h2>
+  <form action="/profile" method="POST" >
+  <div class='addtask'>
+    <input type="text" name="title" class="form" placeholder="Task Title" required >
+  </div>
+    <br>
+  <div class='addtask'>
+      <button  type="submit">Add Task</button>
+  </div>
   </form>
   <% } else { %>
     <p>Please login to start adding tasks</p>
