--- a/views/style.css
+++ b/views/style.css
@@ -6,4 +6,25 @@ body {
 }
 footer{
     margin-top: 100px ;
+    font-size: 30px;
+    text-align: center;
+}
+.form{
+width: 50%;
+padding: 12px;
+font-size: 20px;
+text-align: center;
+box-sizing: border-box;
+}
+.addtask{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#taskhead{
+    text-align: center;
+    font-size: 32px;
+}
+#head {
+    text-align: center;
 }
