--- a/views/style.css
+++ b/views/style.css
@@ -27,4 +27,10 @@ box-sizing: border-box;
 }
 #head {
     text-align: center;
+    font-size: 30px;
+}
+.tasks{ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
