added some more styling

--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -1,12 +1,11 @@
 <img src="../logo.png" alt="My Logo" width="100">
 <% if (user) { %>
     <div id='logoutlogin'>
-      <a href='/logout'><button>Log Out</button></a>
-    <span id='welcomeuser'>Hi <%= user.name %> </span>
+      <a href='/logout'><button class="user">Log Out</button></a>
     </div>
   <% } else { %>
-    <div id='logindiv'>
-      <a id='loginlink' href='/auth/google'><button id='loginbutton'> Login with Google</button></a>
+    <div id='logoutlogin'>
+      <a id='loginlink' href='/auth/google'><button class="user"> Login with Google</button></a>
     </div>
   <% } %>  
       
