--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,8 +4,8 @@
 <% } %>
 <% if (user) { %>
     <% user.tasks.forEach(task => { %>
+      <h2 id="taskbar"><%= task.title %></h2>
       <div class="tasks">
-      <h2><%= task.title %></h2>
       <form action="/profile/remove/<%= task._id %>?_method=PUT" method="POST" >
         <input type="hidden" name="_method" value="DELETE">
         <button type="submit">Delete</button>
@@ -24,7 +24,7 @@
   </div>
   </form>
   <% } else { %>
-    <p>Please login to start adding tasks</p>
+    <p id="notloggedin">Please login with google to start adding tasks!</p>
     <% } %>
     
 
