--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' href='../style.css' type='text/css'>
+    <link rel="icon" href="./lieth_dallal_logo (1).svg">
     <title>Task-Master</title>
 </head>
 <body>
